--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -55,8 +55,8 @@
                                 <div class="single-product-image" style="float: none">
                                     <div class="product-big-image tab-content">
                                         <div class="tab-pane active" id="pro-img-1">
-                                            <img src="img/product/1.jpg" alt="" />
-                                            <a class="pro-img-popup" href="img/product/1.jpg"><i class="zmdi zmdi-search"></i></a>
+                                            <img src="https://abctestsdsd.s3.amazonaws.com/<%=_uG.productImage%>" alt="" />
+                                            <a class="pro-img-popup" href="https://abctestsdsd.s3.amazonaws.com/<%=_uG.productImage%>"><i class="zmdi zmdi-search"></i></a>
                                         </div>
                                     </div>
                                 </div>
