--- a/public/css/addNews.css
+++ b/public/css/addNews.css
@@ -327,7 +327,7 @@ h3 {
   background-color: #eaeaea;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  padding: 80px 0;
+  padding: 20px 0;
   box-sizing: border-box;
   overflow: hidden;
   animation: modal-in 1.6s ease both;
@@ -481,19 +481,77 @@ h3 {
 .txtEdit{
   width: 100%;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-  padding: 5px;
+  padding: 10px;
   font-size: 16px;
-  color: gray;
+  color: black;
   font-weight: bold;
-  outline: none;
-  background: none;  
+  background-color: #cfcfcf;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 
 .labelEdit{
-  margin-top: 8px; 
+  font-weight: bold;
   font-size: 13px;
   color: #9c9c9c;
-  font-weight: 100;
   text-transform: uppercase;
+}
+
+.labelEdit > i{
+  text-transform: none;
+  font-weight: 600;
+}
+
+
+/* CSS DESIGN FOR MODAL */
+.btnModal{
+  border: 0;
+    width: 100%;
+    display: block;
+    padding: 10px;
+    border-radius: 0.375rem;
+    font-size: 14px;
+    color: #fff;
+    background: #222;
+    letter-spacing: 0.0625rem;
+    outline: none;
+}
+
+.btnModal:hover{
+  opacity: 0.9;
+}
+
+
+.modal-header{
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  border-bottom: none;
+}
+
+.modal-header .close{
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  display: inline-block;
+  color: black;
+  font-size: 40px;
+  opacity: 1;
+}
+
+.modal-title{
+  text-align: center;
+  padding-top: 40px;
+  text-transform: uppercase;
+}
+
+.modal-body{
+  padding: 10px 60px 100px 60px;
+}
+
+.error-label{
+  text-transform: inherit;
+  font-style: italic;
+  color: red;
+  font-size: 13px;
+  font-weight: 400;
 }
