--- a/views/quanlydaugia.ejs
+++ b/views/quanlydaugia.ejs
@@ -10,7 +10,7 @@
     <script src='js/jquery.min.js'></script>
     <!--SOCKETIO for Sign up-->
     <script src="socket.io/socket.io.js"></script>
-    <script> var socket = io('http://54.175.16.232:3000'); </script>
+    <script> var socket = io('http://localhost:3000'); </script>
     <script>
         $(document).ready(function () {
             $("#addProductBtn").click(function () {
@@ -76,13 +76,12 @@
     <div class="wrapper bg-white fix">
         <!-- Header 4 --> <% include element/header %>
         <!-- Cart Area -->
-        <div class="cart-area pb-90 pt-90 mt-100">
+        <div class="cart-area pt-90 mt-100">
             <div class="container">
                 <div class="row">
                     <!-- Modal -->
                     <h5 style="padding-left: 15px;"><strong>Thêm phiên đấu giá trong dánh sách SẢN PHẨM</strong></h5>
-                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index: 2000;">
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index: 2000;">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -97,29 +96,22 @@
                                         <input name="productID" id="productIDEdit" type="hidden">
                                         <div class="input-wrapper">
                                             <label class="labelEdit">Tên:</label>
-                                            <input name="productName" class="txtEdit" id="edit_bnPhone" type="text"
-                                                onblur="checkproductName_edit(this.value)">
-                                            <label id="error_productName_edit"
-                                                style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;font-weight: 400;"></label>
+                                            <input name="productName" class="txtEdit" id="edit_bnPhone" type="text" onblur="checkproductName_edit(this.value)">
+                                            <label id="error_productName_edit" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;font-weight: 400;"></label>
                                         </div>
                                         <div class="input-wrapper">
                                             <label class="labelEdit">Mô tả:</label>
-                                            <input name="productDescribe" class="txtEdit" id="edit_bnEmail" type="text"
-                                                onblur="checkproductDescribe_edit(this.value)"><br>
-                                            <label id="error_productDescribe_edit"
-                                                style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;font-weight: 400;"></label>
+                                            <input name="productDescribe" class="txtEdit" id="edit_bnEmail" type="text" onblur="checkproductDescribe_edit(this.value)"><br>
+                                            <label id="error_productDescribe_edit" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;font-weight: 400;"></label>
                                         </div><br>
-                                        <button onclick="checkEditProduct();" class="btn btn-warning" id="btnEdit"
-                                            type="button" style="padding: 5px;">Xác nhận</button>
+                                        <button onclick="checkEditProduct();" class="btn btn-warning" id="btnEdit" type="button" style="padding: 5px;">Xác nhận</button>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div> <% var formatter = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }); %>
-                <div class="row" style="margin-top: 20px;">
+                </div> <% var formatter = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }); %> <div class="row" style="margin-top: 20px;">
                     <div class="col-xs-12">
-                        <i>Phiên đấu giá đã chạy không được phép sửa hoặc xóa</i>
                         <div class="cart-table table-responsive mb-50">
                             <table class="table">
                                 <thead>
@@ -133,13 +125,11 @@
                                         <th class="remove" style="width: 50px;">TT</th>
                                         <th class="remove" style="width: 50px;">Xoá</th>
                                     </tr>
-                                </thead><% var i = 1%> <tbody>
-                                    <% function formatNumber(num) { return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')  + " VNĐ"} %>
-                                    <% _uG.forEach((product) => { %> <tr> <% if(product.count != 0){ %> <td>
+                                </thead><% var i = 1%> <tbody> <% function formatNumber(num) { return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')  + " VNĐ"} %> <% _uG.forEach((product) => { %> <tr> <% if(product.count != 0){ %> <td>
                                             <strong><%= i %></strong></td>
                                         <td>
                                             <div class="cart-product text-left fix">
-                                                <img src="img/product/2.jpg" alt="" />
+                                                <img src="https://abctestsdsd.s3.amazonaws.com/<%=product.productImage%>" alt="" />
                                                 <div class="details fix">
                                                     <a href="#"> <%=product.productName%></a>
                                                     <p><%=product.productID%></p>
@@ -153,9 +143,7 @@
                                                 <p class="cart-stock"><%=product.auction.auctionName%></p>
                                             </strong>
                                         </td>
-                                        <td> <%let current_datetime = new Date(product.auction.startDate);%>
-                                            <%let formatted_date = current_datetime.getFullYear() + "-" + (current_datetime.getMonth() + 1) + "-" + current_datetime.getDate() + " " + current_datetime.getHours() + ":" + current_datetime.getMinutes();%>
-                                            <p class="cart-stock"><%=formatted_date%></p>
+                                        <td> <%let current_datetime = new Date(product.auction.startDate);%> <%let formatted_date = current_datetime.getFullYear() + "-" + (current_datetime.getMonth() + 1) + "-" + current_datetime.getDate() + " " + current_datetime.getHours() + ":" + current_datetime.getMinutes();%> <p class="cart-stock"><%=formatted_date%></p>
                                         </td>
                                         <td>
                                             <p class="cart-stock"><%=product.auction.timeRun%> giây</p>
@@ -164,21 +152,19 @@
                                             <p class="cart-stock"><%=product.auction.startPrice%></p>
                                         </td>
                                         <td>
-                                            <p class="cart-stock"><% if(product.auction.isRunning){ %> ON <%}else{%> OFF
-                                                <% } %></p>
-                                        </td>
-                                        <% var date = new Date(product.auction.startDate); %>
-                                        <% var nowdate = new Date(); %>
-                                        <td><% if ((nowdate.getTime() - date.getTime()) < 0) { %>
-                                            <a
-                                                onclick="setHrefDel('/deleteauction?productID=<%= product.productID %>&owner=<%= product.ownerName %>&businessID=<%= product.id %>')"><button
-                                                    class="cd-popup-trigger cart-pro-remove"><i
-                                                        class="zmdi zmdi-close"></i></button></a><% } %></td>
+                                            <p class="cart-stock"><% if(product.auction.isRunning){ %> ON <%}else{%> OFF <% } %></p>
+                                        </td> <% var date = new Date(product.auction.startDate); %> <% var nowdate = new Date(); %> <td><% if ((nowdate.getTime() - date.getTime() < 0) || (((nowdate.getTime() - date.getTime()) + product.auction.timeRun > 0) && product.auction.bids.length === 0)) { %> <a onclick="setHrefDel('/deleteauction?productID=<%= product.productID %>&owner=<%= product.ownerName %>&businessID=<%= product.id %>')"><button class="cd-popup-trigger cart-pro-remove"><i class="zmdi zmdi-close"></i></button></a><% } %></td>
                                     </tr> <% i++;%> <% }; %> <% }); %> </tbody>
                             </table>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container-fuild" style="background: #2c3338; padding-bottom: 100px; margin-top: 100px;">
+                <h4 class="modal-title"><strong style="color: white;">QUY ĐỊNH VỀ PHIÊN ĐẤU GIÁ</strong></h4>
+                <p style="text-align: center;color: white; padding-top: 30px;"> - Phiên đấu giá <strong>không được xóa hoặc sửa</strong> khi có <strong>một trong</strong> các điều kiện sau:</p>
+                <p style="text-align: center;color: white;"> 1. Phiên đấu giá đang trong thời gian chạy</p>
+                <p style="text-align: center;color: white;"> 2. Phiên đấu giá đã có hóa đơn</p>
             </div>
         </div>
         <div class="cd-popup" role="alert">
